<resources>
    <string name="app_name">BiaApp</string>
    <string name="task">Задания</string>
    <string name="graph">Графики</string>
    <string name="profile">Профиль</string>
    <string name="point">●</string>
    <string name="show_detail">Посмотреть детали</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail">Детали заказа</string>
    <string name="payment">Детали оплаты</string>
    <string name="body_type">Тип кузова</string>
    <string name="city">Город исполнения</string>
    <string name="date">Дата заказа</string>
    <string name="time">Время прибытия</string>
    <string name="start_point">Начальная точка маршрута</string>
    <string name="finish_point">Конечная точка маршрута</string>
    <string name="cargo_type">Тип груза</string>
    <string name="contacts">Контакты</string>
    <string name="task_detail">Детали задания</string>
    <string name="accept">Принять</string>
    <string name="refuse">Отказаться</string>
    <string name="incident">Инцидент</string>
    <string name="mistake">Ошибка</string>
    <string name="docs">Прикрепить документы</string>
    <string name="finish_task">Завершить заказ</string>
    <string name="refuse_a_task">Отказаться от задания</string>
    <string name="headline_success">Работа выполнена</string>
    <string name="success_text">Задание было выполнено успешно</string>
    <string name="choose_incident">Выберите что произшло</string>
    <string name="address">Проблема на адресе</string>
    <string name="path">Проблема в пути</string>
    <string name="loading">Проблема на загрузке</string>
    <string name="save">Сохранить</string>
    <string name="choose_variant">Выберите один из вариантов</string>
    <string name="you_refused_the_task">Вы отказались от задания</string>
</resources>