<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_task">

    <fragment
        android:id="@+id/navigation_task"
        android:name="ru.borodinskiy.aleksei.biaapp.ui.task.TaskFragment"
        android:label="@string/task"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="ru.borodinskiy.aleksei.biaapp.ui.graph.GraphFragment"
        android:label="@string/graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.borodinskiy.aleksei.biaapp.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>