<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.task.TaskIncidentFragment">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_16"
        android:layout_marginTop="@dimen/action_bar_size_and_margin_72"
        android:text="@string/choose_incident"
        android:textColor="?attr/colorSecondary"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="15dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin_16"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_16"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/text_view">

        <RadioButton
            android:id="@+id/radio_button_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radio_button_path"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path" />

        <RadioButton
            android:id="@+id/radio_button_load"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_incident"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_16"
        android:layout_marginTop="@dimen/activity_horizontal_margin_16"
        android:text=""
        android:textColor="@color/red_200"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin_16"
        android:backgroundTint="@color/gray_button"
        android:textColor="?attr/colorSecondary"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>