<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_8"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_16"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_16"
        android:layout_marginBottom="@dimen/margin_20">

        <TextView
            android:id="@+id/headline_cargo_type"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/cargo_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/cargo_type"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@+id/headline_cargo_type"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:text="Мебель"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headline_city"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/cargo_type"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/city"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/headline_city"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:text="Москва"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headline_date"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/date"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/headline_date"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:text="15.09.2023"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headline_time"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/time"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/headline_time"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:text="12:00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headline_start_point"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/time"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/start_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/start_point"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/headline_start_point"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            android:textColor="@color/blue_link"
            tools:text="Красная площадь, 1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headline_finish_point"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/start_point"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/finish_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/finish_point"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/headline_finish_point"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            android:textColor="@color/blue_link"
            tools:text="Набережная Фонтанки, 1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headline_body_type"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/finish_point"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/body_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/body_type"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/headline_body_type"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:text="Тентованный"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headline_detail"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/body_type"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/detail"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/headline_detail"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:text="Некие важные детали"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headline_payment_param"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/detail"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/payment_param"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/headline_payment_param"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:text="Наличными"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headline_contacts"
            android:layout_marginTop="@dimen/margin_12"
            app:layout_constraintTop_toBottomOf="@id/payment_param"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/phone_number"
            android:textColor="@color/blue_link"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/headline_contacts"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:text="+7 223 322 223 322"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/name"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="@dimen/margin_4"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="17sp"
            tools:text="Достоевский Федор Михайлович"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>