<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_8"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin_16"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/activity_horizontal_margin_16"
        android:layout_marginBottom="@dimen/margin_20">

        <TextView
            android:id="@+id/cargo_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondary"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Мебель" />

        <TextView
            android:id="@+id/current_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/cargo_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cargo_type"
            tools:text="Текущее задание" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:textColor="?attr/colorSecondary"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@id/cargo_type"
            app:layout_constraintTop_toBottomOf="@id/cargo_type"
            tools:text="15.09.2023" />

        <TextView
            android:id="@+id/point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:text="@string/point"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/date"
            app:layout_constraintStart_toEndOf="@id/date"
            app:layout_constraintTop_toTopOf="@id/date" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:textColor="?attr/colorSecondary"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/date"
            app:layout_constraintStart_toEndOf="@id/point"
            app:layout_constraintTop_toTopOf="@id/date"
            tools:text="12:00" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@color/light_gray"
            android:paddingBottom="@dimen/margin_12"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:src="@drawable/ic_arrow_32"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/start_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="?attr/colorSecondary"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@id/arrow"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Москва, Красная площадь, 1" />

            <TextView
                android:id="@+id/finish_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="?attr/colorSecondary"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@id/arrow"
                app:layout_constraintTop_toBottomOf="@id/start_point"
                tools:text="Санкт-Петербург, Дворцовая площадь, 1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/headline_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/detail"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/route" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:textColor="?attr/colorSecondary"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline_detail"
            tools:text="Диван, чемодан, саквояж" />

        <TextView
            android:id="@+id/headline_payment_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/payment"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail" />

        <TextView
            android:id="@+id/payment_param"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:textColor="?attr/colorSecondary"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headline_payment_param"
            tools:text="Деньги вперёд" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/show_detail_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:backgroundTint="@color/dark_200"
            android:text="@string/show_detail"
            android:textAllCaps="false"
            android:textSize="17sp"
            app:cornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@id/payment_param" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/successful_completion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:visibility="gone"
            android:background="@color/light_gray"
            android:paddingBottom="@dimen/margin_12"
            app:cardCornerRadius="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_param">

            <TextView
                android:id="@+id/headline_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="@color/green"
                android:layout_marginStart="@dimen/activity_horizontal_margin_16"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/headline_success" />

            <TextView
                android:id="@+id/text_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:textColor="?attr/colorSecondary"
                android:layout_marginStart="@dimen/activity_horizontal_margin_16"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headline_success"
                android:text="@string/success_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>